# job_crawler

./: .env.example  .gitignore  CLAUDE.md  README.md  ROADMAP.md  alembic.ini  pyproject.toml
.claude/: settings.json
alembic/: README  env.py
alembic/versions/: 866a1946d299_init.py  a1b2c3d4e5f6_add_image_urls_to_jobs.py  b2c3d4e5f6a7_add_is_applied_to_jobs.py  c3d4e5f6a7b8_add_is_ignored_to_jobs.py  d4e5f6a7b8c9_add_application_status_to_jobs.py
src/job_crawler/: config.py  logging_setup.py  pipeline.py  scheduler.py
src/job_crawler/crawlers/: base.py  catch.py  jobkorea.py  jumpit.py  playwright_base.py  registry.py  remember.py  saramin.py  wanted.py
src/job_crawler/crawlers/company/: greeting.py  toss.py
src/job_crawler/db/: models.py  session.py
src/job_crawler/filters/: criteria.py
src/job_crawler/resume/: loader.py  models.py
src/job_crawler/scoring/: claude_batch.py  contract.py  eval.py  gemini_client.py  matcher.py
src/job_crawler/web/: app.py  body_formatter.py  templating.py
src/job_crawler/web/routers/: jobs.py  runs.py
src/job_crawler/web/templates/: _analysis.html  _application_status.html  _applied_btn.html  _closed_btn.html  _crawl_status.html  _ignored_btn.html  _score.html  base.html  detail.html  index.html  new_job.html  runs.html
tests/: test_filters.py  test_resume_cache.py  test_resume_loader.py  test_score_cli.py  test_scoring_regression.py
tests/golden/: baseline_scores.json  golden_set.json
